# CockPitchControl

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
components/mcp2515/: CMakeLists.txt  mcp2515.c  (+2 more)
main/: CMakeLists.txt  main.c
main/Headers/: analogin.h  can.h  canBUS.h  digitalin.h  hardware.h  pcf8574.h  usbhid.h
main/Source/: analogin.c  can.c  canBUS.cpp  digitalin.c  hardware.c  main.c  main.cpp  mainmachine.c  pcf8574.c  usbhid.c
main/lib/espressif__tinyusb/: .codespellrc
main/lib/espressif__tinyusb/hw/bsp/: board.h
main/lib/espressif__tinyusb/hw/bsp/broadcom_32bit/: family.mk
main/lib/espressif__tinyusb/hw/bsp/ch32v307/: ch32v307.ld  ch32v30x_conf.h  family.c
main/lib/espressif__tinyusb/hw/bsp/da14695_dk_usb/: board.mk
main/lib/espressif__tinyusb/hw/bsp/da1469x_dk_pro/: board.mk  da1469x-dk-pro.c
main/lib/espressif__tinyusb/hw/bsp/ea4357/: pca9532.c
main/lib/espressif__tinyusb/hw/bsp/f1c100s/: README.md  board.h
main/lib/espressif__tinyusb/lib/networking/: dnserver.h
main/lib/espressif__tinyusb/src/: tusb.c
main/lib/espressif__tinyusb/src/common/: tusb_mcu.h
main/lib/espressif__tinyusb/src/host/: hcd.h
main/lib/espressif__tinyusb/test/fuzz/: dcd_fuzz.cc  fuzz.cc  fuzz.h  fuzz_private.h  make.mk  msc_fuzz.cc  net_fuzz.cc  rules.mk  usbd_fuzz.cc
main/lib/espressif__tinyusb/test/unit-test/: project.yml
main/lib/espressif__tinyusb/tools/: build_board.py  build_cmake.py  build_esp32.py  build_family.py  build_utils.py  gen_doc.py  get_deps.py  iar_gen.py  iar_template.ipcf  make_release.py  mksunxi.py  pcapng_to_corpus.py
(+656 files in other folders)
